[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/always-success",
  "contracts/rust-assert-cighash",
  "crates/native-cighash-all-mock-tx-generator",
  "crates/cighash-all-utils",
  "crates/test-utils",
  "tests",
]

[profile.release]
overflow-checks = true
strip = false
codegen-units = 1
debug = true
