[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/always-success",
  "contracts/rust-assert-ckb-tx-message-all",
  "crates/native-test-vector-generator",
  "crates/ckb-tx-message-all-utils",
  "crates/test-utils",
  "tests",
]

[profile.release]
overflow-checks = true
strip = false
codegen-units = 1
debug = true
