[package]
name = "rust-assert-cighash"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = "0.16.3"
ckb-rust-std = "1.0.0"
ckb-gen-types = { version = "0.119.0", default-features = false }
ckb-hash = { version = "0.119.0", default-features = false, features = ["ckb-contract"] }
cighash-all-utils = { path = "../../crates/cighash-all-utils", default-features = false }

[features]
native-simulator = ["ckb-std/native-simulator"]
