[package]
name = "rust-assert-ckb-tx-message-all"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = "0.16.3"
ckb-rust-std = "1.0.0"
ckb-gen-types = { version = "0.119.0", default-features = false }
ckb-hash = { version = "0.119.0", default-features = false, features = ["ckb-contract"] }
ckb-tx-message-all-utils = { path = "../../crates/ckb-tx-message-all-utils", default-features = false }

[features]
native-simulator = ["ckb-std/native-simulator"]
