[package]
name = "cighash-all-utils"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["ckb-mock-tx-types"]

[dependencies]
ckb-std = "0.16.3"
ckb-rust-std = "1.0.0"
ckb-gen-types = { version = "0.119.0", default-features = false }
molecule = { version = "0.8", default-features = false }

ckb-mock-tx-types = { version = "0.119.0", optional = true }
