[package]
name = "native-test-vector-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-testtool = "0.14.1"
cighash-all-utils = { path = "../cighash-all-utils", features = ["std"] }
test-utils = { path = "../test-utils" }
clap = { version = "4.5.28", features = ["cargo", "derive"] }
rand = "0.8.5"
serde_json = "1.0"
